--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "https": "HTTPS=true npm start",
     "build": "react-scripts build",
     "lint": "eslint src -c .eslintrc.json --ext js,jsx",
     "test": "react-scripts test",
@@ -17,6 +18,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:4000",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -38,6 +40,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
-    "prettier": "^1.17.1"
+    "graphql": "^14.3.1",
+    "prettier": "^1.17.1",
+    "urql": "^1.0.5"
   }
 }
